--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,15 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "aos": "^2.3.4",
+    "axios": "^0.19.2",
     "node-sass": "^4.14.1",
+    "notistack": "^0.9.17",
+    "nprogress": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-particles-js": "^3.3.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "react-swipeable-views": "^0.13.9"
+    "react-scripts": "3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
