--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
     "@testing-library/user-event": "^7.2.1",
     "aos": "^2.3.4",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "node-sass": "^4.14.1",
     "notistack": "^0.9.17",
     "nprogress": "^0.2.0",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-particles-js": "^3.3.0",
     "react-redux": "^7.2.1",
