configure the package.js scripts for deployment

--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "start:dev": "nodemon -r dotenv/config app.js"
+    "start:dev": "nodemon -r dotenv/config app.js",
+    "pushToHeroku:server": "cd ../ && git subtree push --prefix server heroku-server master || true"
   },
   "engines": {
     "node": "13.10.1"
