--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "pushToHeroku:client": "cd ../ && git subtree push --prefix client heroku-client master || true"
   },
   "eslintConfig": {
     "extends": "react-app"
