--- a/server/package.json
+++ b/server/package.json
@@ -27,8 +27,7 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
     "nodemailer-sendgrid-transport": "^0.2.0",
-    "socket.io": "^2.3.0",
-    "uuid": "^8.3.0"
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0"
