--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,6 @@
     "aos": "^2.3.4",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
-    "node-sass": "^4.14.1",
     "notistack": "^0.9.17",
     "nprogress": "^0.2.0",
     "react": "^16.13.1",
@@ -24,14 +23,16 @@
     "react-scripts": "^3.4.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "sass": "^1.56.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "pushToHeroku:client": "cd ../ && git subtree push --prefix client heroku-client master || true"
+    "pushToHeroku:client": "cd ../ && git subtree push --prefix client heroku-client master || true",
+    "clientDeploy": "git subtree push --prefix server clientDeploy master"
   },
   "eslintConfig": {
     "extends": "react-app"
