--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "start": "node app.js",
     "start:dev": "nodemon -r dotenv/config app.js",
     "pushToHeroku:server": "cd ../ && git subtree push --prefix server heroku-server master || true",
-    "serverDeploy" : "cd ../ && git subtee push --prefix server serverDeploy master"
+    "serverDeploy": "cd ../ && git subtee push --prefix server serverDeploy master"
   },
   "engines": {
     "node": "13.10.1"
@@ -21,6 +21,7 @@
     "cloudinary": "^1.22.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
+    "google-auth-library": "^8.7.0",
     "helmet": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.27",
@@ -28,6 +29,8 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
